# extrae

./: PATHS  configure.ac
docs/source/xml/: counters.xml
example/LINUX/MPI/: extrae.xml  extrae_explained.xml
include/: Makefile.am  extrae_plugins.h
src/common/: events.c  events.h  utils.c  utils.h
src/merger/dimemas/: misc_trf_semantics.c
src/merger/paraver/: labels.c  labels.h  misc_prv_events.c  misc_prv_semantics.c
src/tracer/: Makefile.am  xml-parse.c  xml-parse.h
src/tracer/interfaces/API/: Makefile.am
src/tracer/periodic_timer/: Makefile.am  event_timer.c  event_timer.h  plugin_manager.c  plugin_manager.h  plugin_utils.h  timer_manager.c  timer_manager.h
src/tracer/plugins/: Makefile.am  cpuinfo.c  mallinfo.c  meminfo.c  memusage.c  memusage.h  rusage.c  rusage.h  xtr_plugin_meminfo.c  xtr_plugin_meminfo.h
src/tracer/wrappers/API/: misc_wrapper.c  misc_wrapper.h  wrapper.c  wrapper.h
src/tracer/wrappers/MPI/: mpi_wrapper.c
